fixed firefox scrollbar

--- a/OnaniFrontend/static/css/onani.style.css
+++ b/OnaniFrontend/static/css/onani.style.css
@@ -2,7 +2,7 @@
  * @Author: Blakeando
  * @Date:   2020-08-14 21:37:59
  * @Last Modified by:   Blakeando
- * @Last Modified time: 2020-09-17 17:29:28
+ * @Last Modified time: 2020-09-18 20:51:42
 */
 
 
@@ -14,6 +14,8 @@
   font-family: 'Jost', sans-serif;
   margin: 0;
   padding: 0;
+  scrollbar-color: red black;
+  scrollbar-width: thin;
   transform: translateZ(0);
   z-index: 1;
 }
